2006-05-01  Marco Scholten  <mscholtn@xs4all.nl>

	* src/dialogs/inkscape-preferences.cpp: Moved 'compass like
    display of angles' from 'windows' to 'steps'.

2006-04-29  Jon Phillips  <jon@rejon.org>

	* src/dialogs/rdf.cpp: Updated cc licenses to 2.5 by default.

	* src/ui/dialog/document-metadata.cpp: Made metadata window
	resizable so that one can see the licenses and enter long entries.

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/display/nr-arena-group.cpp, src/display/nr-arena-item.cpp,
	  src/display/nr-arena-item.h, src/display/nr-arena-shape.cpp:

	  rationalize function names and remove spurious soft_ptr

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/document.cpp:
	
	  use proper unref function on SPRoot to avoid appearance of leak

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/gc-anchored.cpp, src/xml/simple-node.cpp, src/sp-object.cpp:

	  switch everyone to simpler debug event API

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/Makefile_insert, src/gc-finalized.cpp, src/gc-finalized.h:

	  add finalizer logging

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/debug/simple-event.h: simplify the SimpleEvent API more

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/debug/simple-event.h: make Debug::SimpleEvent more convenient

	* src/debug/event.h, src/debug/logger.cpp: add FINALIZERS category

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/debug/logger.cpp:
	
	finish interrupted refactoring of log filter configuration

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/doc/Makefile.am, src/doc/refcounting.txt:
	
	  some developer documentation about refcounting

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/ui/view/view.cpp:

	  Wait a minute -- UI::View::View and SPDocument are both managed
	  by the collector -- the view doesn't need to ref the document!

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/ui/view/view.cpp: add missing unref

2006-04-29  MenTaLguY  <mental@rydia.net>
